[package]
name = "sik"
version = "0.1.0"
edition = "2021"
description = "Swiss Indexing Knife — Graph Protocol indexer operations CLI"

[[bin]]
name = "sik"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
dirs = "5"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
